# CryptoTrade

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CSVReader.h  MerkelMain.h  OrderBook.h  OrderBookEntry.h  OrderBookStats.h  Wallet.h
src/: CSVReader.cpp  MerkelMain.cpp  OrderBook.cpp  OrderBookEntry.cpp  OrderBookStats.cpp  Wallet.cpp  main.cpp
